| Summary: | ASTERISK-25027: Build System: Many ARI modules are missing dependencies. | ||
| Reporter: | Corey Farrell (coreyfarrell) | Labels: | |
| Date Opened: | 2015-04-29 00:56:47 | Date Closed: | 2015-05-06 06:14:44 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Core/BuildSystem |
| Versions: | SVN 13.3.2 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | ARI modules that are generated by 'make ari-stubs' are all dependent on res_ari_model. Additionally some of the same modules depend on one or more res_stasis_* modules.
A minor fix to 'make ari-stubs' is also included to ensure the directory './doc/rest-api' exists before trying to generate stubs. The directory is also added to git ignores. Dependencies and unneeded headers were removed from res_pjsip/presence_xml.c as they are wrong and would no longer be ignored. | ||
| Comments: | By: Corey Farrell (coreyfarrell) 2015-05-05 09:52:36.914-0500 Missed dependencies for res_ari_bridges, re-opening ticket and posting additional commit. | ||