ARI: Fix missing dependencies.

ARI modules that are generated by 'make ari-stubs' are all dependent on
res_ari_model.  Additionally some of the same modules depend on one or more
res_stasis_* modules.

A minor fix to 'make ari-stubs' is also included to ensure the directory
'./doc/rest-api' exists before trying to generate stubs.  The directory is
also added to git ignores.

Dependencies and unneeded headers were removed from res_pjsip/presence_xml.c
as they are wrong and would no longer be ignored.

ASTERISK-25027 #close
Reported by: Corey Farrell

Change-Id: I8e07fe7e81fedacb87232f2b6f8b5f47927b4153